--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,27 +1,33 @@
-<header>
-    Page Header
-
-    <ul>
-        <% if(locals.user){ %>
-            <li>
-                <a href="/users/profile">
-                    <%= user.name %>
+<header id="layout-header">
+    <nav>
+        <div class="mini-logo">
+            <p>
+                <a href='/'>
+                    Link-up
                 </a>
-            </li>
-            <li>
-                <a href = '/users/sign-out'>Sign Out</a>
-            </li>
-        <% }else{ %>
-            
-            <li>
-                <a href = '/users/sign-in'>Sign In</a>
-            </li>
-
-            <li>
-                <a href = '/users/sign-up'>Sign Up</a>
-            </li>
-
-        <% } %>
-    </ul>
-
+            </p>
+        </div>
+    
+        <div class="auth-links">
+            <ul style="list-style: none">
+                <% if (locals.user){ %>
+                <li>
+                    <a href="/users/profile"><%= user.name %></a>
+                </li>
+                <li>
+                    <a href="/users/sign-out">Sign Out</a>
+                </li>
+                <% }else{ %>
+                <li>
+                    <a href="/users/sign-in">Sign In</a>
+                </li>
+                <li>
+                    <a href="/users/sign-in">Sign Up</a>
+                </li>
+        
+                <% } %>
+            </ul>
+        </div>
+    </nav>
+ 
 </header>
