--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,9 +5,10 @@
         <h4>Posts</h4>
         
         <% if (locals.user) { %> 
-        <form action="/posts/create" id="new-post-form" method="POST">
+        <form action="/posts/create" id="new-post-form" method="POST" >
             <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
-            <input type="submit" value="Post">
+            <input type="submit" value="Post"> 
+            
         </form>
         <% } %>
 
@@ -38,6 +39,11 @@
     </section>
 
 </div>
+
+
+<script src="/js/home_post_comments.js"></script>
+<script src="/js/home_posts.js"></script>
+
 
 
     
