--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -12,7 +12,7 @@
             <ul style="list-style: none">
                 <% if (locals.user){ %>
                 <li>
-                    <a href="/users/profile"><%= user.name %></a>
+                    <a href="/users/profile/<%= user.id %>"><%= user.name %></a>
                 </li>
                 <li>
                     <a href="/users/sign-out">Sign Out</a>
