Added google Authentication and Api's

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,17 +17,17 @@
     </head>
 
     <body>
-        <%- include('_header'); %>
+        <%- include('_header'); -%>
         
         <main id="layout-main">
-            <%- body %>
+            <%- body -%>
 
         </main>
 
 
-        <%- include('_footer'); %>
+        <%- include('_footer'); -%>
 
-        <%- script %>
+        <%- script -%>
         
         <!--Adding Noty flash Messages-->
         <script>
