--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,7 +1,7 @@
 <footer id="layout-footer">
     <div>
         <p>
-            &#169; Coding Ninjas. All Rights Reserved
+            Coding Ninjas. All Rights Reserved
         </p>
     </div>
 
@@ -11,9 +11,16 @@
                 <li>
                     <a href="/">Home</a>
                 </li>
-                <li>
-                    <a href="/users/profile/<%= user.id %>">Profile</a>
-                </li>
+                
+                <% if(locals.user) {%>
+                    <li>
+                        <a href="/users/profile/<%= user.id %>">Profile</a>
+                    </li>
+                <% } else { %>
+                    <li>
+                        <a href="/users/sign-in">Sign In</a>
+                    </li>
+                <% } %>
             </ul>
         </nav>
     </div>
