--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -9,4 +9,6 @@
 
 <p>
     <a href="/users/auth/google">Google Sign In/Sign Up</a>
+    <p></p>
+    <a href="/users/reset-password">Forgot Password?</a>
 </p>
