--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -5,7 +5,7 @@
     <img src="<%= user.avatar %>" alt="<%= user.name %>" width="100">
 <% } %>
 
-<% if(user.id == profile_user.id) { %>
+<% if(user.id === profile_user.id) { %>
     <!--if user matches then show the form-->
     <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="post">
 
@@ -22,4 +22,26 @@
     <p> <%= profile_user.name %> </p>
     <p> <%= profile_user.email %> </p>
 
-<% } %>
+    <!-- add friend logic -->
+    <% if(!locals.are_friends) {%>
+
+        <a type="button" href="/users/profile/<%= profile_user._id %>/toggle_friend" id="add-friend">
+            Add Friend
+        </a>
+    
+    <% } else {%>
+
+        <a type="button" href="/users/profile/<%= profile_user._id %>/toggle_friend" id="remove-friend">
+            Remove Friend
+        </a>
+
+    <% } %>
+
+    <% } %>
+
+
+
+  
+
+
+<script src="js/toggle_likes.js"></script>
