--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,7 +1,7 @@
 <footer id="layout-footer">
     <div>
         <p>
-            Coding Ninjas. All Rights Reserved
+            &#169; Link-up . All Rights Reserved
         </p>
     </div>
 
@@ -11,7 +11,7 @@
                 <li>
                     <a href="/">Home</a>
                 </li>
-                
+                &nbsp;&nbsp;&nbsp;
                 <% if(locals.user) {%>
                     <li>
                         <a href="/users/profile/<%= user.id %>">Profile</a>
