--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,25 +1,41 @@
-<li id="post-<%= post._id %>">
-    <p>
-        <% if(locals.user && locals.user.id == post.user.id){ %>
-            <small>
-                <a class="delete-post-button" href="/posts/destroy/<%= post.id %>">x</a>
-            </small>
-        <% } %>
 
+<li id="post-<%= post._id %>" style="width:90%;margin-left: 3%;" class="each-post">
+
+
+    <p>
+        <div class="avatar-cross">
+            <small class="post-users-name">
+                <img src="<%= post.user.avatar %>" class="post-avatar">
+                <%= post.user.name %>
+            </small>
+        
+            <!-- Delete button Post -->
+            <% if(locals.user && locals.user.id == post.user.id){ %>
+                <small>
+                    <a class="delete-post-button" href="/posts/destroy/<%= post.id %>" style="text-decoration: none;">
+                        <img src="/images/garbage.png" style="width:25px;height:25px;cursor:pointer;position: relative;top: 3px;">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </a>
+                </small>
+            <% } %>
+
+        </div>
+        <br>
+        <hr class="horizontal-line">
         <%= post.content %>
         <br>
-        <small>
-            <%= post.user.name %>  
-        </small>
-
+    
         <!--Display the likes of this post , if user is logged in, then show the link to toggle likes , else just show the like count-->
         <br>
         <small>
             <% if(locals.user){%>
-                <a class="toggle-like-button" data-likes="<%= post.likes.length %>" href="/likes/toggle/?id=<%=post._id %>&type=Post">
-                    <%= post.likes.length %> Likes
+                <a class="toggle-like-button" data-likes="<%= post.likes.length %>" href="/likes/toggle/?id=<%=post._id %>&type=Post" style="color:white;text-decoration: none;">
+                    <span><i class="fa-regular fa-thumbs-up" ></i> </span><%= post.likes.length %> Likes
                 </a>
             <% } else { %>
+                <span><i class="fa-regular fa-thumbs-up" ></i></span>
                 <%= post.likes.length %> Likes
             <% } %>
         </small>
@@ -32,13 +48,17 @@
                 home_posts.js where we're adding a post to the page -->
                 
             <form id="post-<%= post._id %>-comments-form" action="/comments/create" method="POST">
-                <input type="text" name="content" placeholder="Type here to add comment..." required>
+                <input type="text" name="content" placeholder="Type here to add comment..." required class="add-text">
                 <input type="hidden" name="post" value="<%= post._id %>">
-                <input type="submit" value="Add Comment"> 
+                <input type="submit" value="Add Comment" class="add-button"> 
+
             </form>
 
         <% } %>
 
+        <h4>Comments</h4>
+
+        <!-- Display Comments -->
         <div class="post-comments-list">
             <ul id="post-comments-<%= post._id %>">
                 <% for(comment of post.comments){ %>
