--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -9,3 +9,19 @@
     text-decoration: none; }
   #layout-footer .footer-nav ul {
     list-style: none; }
+
+#layout-footer {
+  margin: 0;
+  height: 60px;
+  color: white;
+  background: #646464;
+  padding: 5px 10px;
+  display: flex;
+  justify-content: flex-start; }
+  #layout-footer a {
+    color: white;
+    text-decoration: none; }
+  #layout-footer .footer-nav ul {
+    list-style: none;
+    display: flex;
+    flex-direction: row; }
