--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,20 +1,104 @@
-#layout-header nav {
+body {
+  background: #303233;
+  font-family: 'Lexend Exa', sans-serif; }
+
+.header nav {
+  position: relative;
+  top: 15px;
+  left: 50%;
+  width: 90vw;
+  height: 50px;
+  transform: translateX(-50%);
+  display: inline-block;
+  border: 1px solid #E0E0E0;
+  background-color: #1e2022;
+  border-radius: 30px;
+  animation: slide-in 1s ease-out;
+  margin-bottom: 10px; }
+
+.header ul {
+  position: relative;
   display: flex;
+  flex: 1 1 auto;
+  margin: 0;
   justify-content: space-between;
-  padding: 0 10px;
-  background: #2196f3;
-  color: white;
-  box-shadow: 1px 1px 1px 1px lightgrey; }
-  #layout-header nav .mini-logo p {
-    margin: 5px;
-    font-size: 1.4rem;
-    font-weight: bold; }
-  #layout-header nav .auth-links ul {
-    margin: 5% 5px;
+  padding: 0 30px;
+  list-style-type: none; }
+  .header ul .nav-flex {
     display: flex;
-    list-style: none; }
-    #layout-header nav .auth-links ul li {
-      margin-right: 10px; }
-  #layout-header nav a {
-    color: white;
-    text-decoration: none; }
+    justify-content: space-between; }
+  .header ul li:not(:last-child) {
+    margin-right: 40px; }
+  .header ul li {
+    border: 2px solid transparent;
+    border-radius: 5px;
+    margin-top: 2px;
+    padding: 10px;
+    padding-top: 14px;
+    transition: background 0.2s; }
+    .header ul li a {
+      color: white;
+      text-decoration: none;
+      text-transform: uppercase;
+      transition: color 0.2s; }
+    .header ul li ul {
+      visibility: hidden;
+      opacity: 0;
+      position: absolute;
+      display: block;
+      margin: 12px -12px;
+      padding: 0;
+      background: #FFA91B;
+      border: 2px solid #F7C833;
+      border-right: 2px solid #F89329;
+      border-bottom: 2px solid #F89329;
+      border-radius: 5px;
+      transition: opacity 0.2s, visibility 0.2s; }
+      .header ul li ul li {
+        margin: -2px 0 0 -2px;
+        width: calc(100% - 20px);
+        line-height: 1.7; }
+        .header ul li ul li a {
+          color: #2375D8; }
+    .header ul li:hover {
+      background: lightgray; }
+      .header ul li:hover a {
+        color: black; }
+      .header ul li:hover ul {
+        visibility: visible;
+        opacity: 1;
+        box-shadow: 0px 3px 5px 2px #EBECF1; }
+        .header ul li:hover ul li a {
+          color: #F9F8FD; }
+
+.header .L-image {
+  height: 35px;
+  width: 35px;
+  position: absolute;
+  left: 29px;
+  top: 7px; }
+
+.header .user-image {
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  right: 320px;
+  top: 9px;
+  border-radius: 50%; }
+
+.header .logged-out-user-image {
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  right: 305px;
+  top: 9px; }
+
+@keyframes slide-in {
+  0% {
+    top: -50px; }
+  40% {
+    top: 20px; }
+  70% {
+    top: 10px; }
+  100% {
+    top: 15px; } }
