--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -1,2 +1,48 @@
 body {
   background-color: lightskyblue; }
+
+#user-profile {
+  overflow: hidden;
+  height: 80vh;
+  color: white; }
+  #user-profile #change-details #update-avatar {
+    position: relative;
+    right: 20px; }
+  #user-profile #change-details .update-button {
+    cursor: pointer;
+    padding: 5px 9px;
+    border-radius: 9px;
+    font-size: 1rem;
+    background-color: black;
+    color: white;
+    border: 2px solid lightgrey; }
+    #user-profile #change-details .update-button:hover {
+      background-color: rgba(51, 51, 54, 0.719);
+      color: white; }
+  #user-profile #change-details input {
+    position: relative;
+    left: 45%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    border: 2px solid gray;
+    border-radius: 10px;
+    padding-left: 5px; }
+  #user-profile #add-friend {
+    background-color: #31e431;
+    border: 2px solid lightgray;
+    padding: 5px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: white; }
+    #user-profile #add-friend:hover {
+      background-color: red; }
+  #user-profile #remove-friend {
+    background-color: black;
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: white; }
+    #user-profile #remove-friend:hover {
+      background-color: orangered; }
