--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -16,3 +16,27 @@
         }
     }
 }
+
+#layout-footer{
+    margin: 0;
+    height: 60px;
+    color: white;
+
+    a{
+        color: white;
+        text-decoration: none;
+    }
+
+    background: rgb(100, 100, 100);
+    padding: 5px 10px;
+    display: flex;
+    justify-content: flex-start;
+
+    .footer-nav{
+        ul{
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+        }
+    }
+}
