--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,35 +1,143 @@
-#layout-header{
-    nav{
-        display: flex;
-        justify-content: space-between;
-        padding: 0 10px;
-        background: #2196f3;
-        color: white;
-        box-shadow: 1px 1px 1px 1px lightgrey;
+body {
+    background:#303233;
+    font-family: 'Lexend Exa', sans-serif;
+}
+ 
+.header{
+    nav {
+        position: relative;
+        top: 15px;
+        left: 50%;
+        width:90vw;
+        height:50px;
+        transform: translateX(-50%);
+        display: inline-block;
+        // justify-content:space-between;
+        border: 1px solid #E0E0E0;
+        background-color: #1e2022;
+        border-radius: 30px;
+        animation: slide-in 1s ease-out;
+        margin-bottom: 10px;
+    }
+ 
+}
 
-        .mini-logo{
-            p{
-                margin: 5px;
-                font-size: 1.4rem;
-                font-weight: bold; 
-            }
+.header{
+
+    ul {
+        position: relative;
+        display: flex;
+        flex: 1 1 auto;
+        margin: 0;
+        justify-content:space-between;
+        padding: 0 30px;
+        list-style-type: none;
+
+        .nav-flex{
+            display: flex;
+            justify-content:space-between;
         }
 
-        .auth-links{
-            ul{
-                margin: 5% 5px;
-                display: flex;
-                list-style: none;
-                li{
-                    margin-right: 10px;
+        li:not(:last-child) {
+            margin-right: 40px;
+        }
+        li{
+            border: 2px solid transparent;
+            border-radius: 5px;
+            margin-top: 2px;
+            padding: 10px;
+           
+            padding-top: 14px;
+            transition: background 0.2s;
+            
+            a {
+                color: white;
+                text-decoration: none;
+                text-transform: uppercase;
+                transition: color 0.2s;
+            }
+            ul {
+                visibility: hidden;
+                opacity: 0;
+                position: absolute;
+                display: block;
+                margin: 12px -12px;
+                padding: 0;
+                background: #FFA91B;
+                border: 2px solid #F7C833;
+                border-right: 2px solid #F89329;
+                border-bottom: 2px solid #F89329;
+                border-radius: 5px;
+                transition: opacity 0.2s, visibility 0.2s;
+                
+                li {
+                    margin: -2px 0 0 -2px;
+                    width: calc(100% - 20px);
+                    line-height: 1.7;
+                    
+                    a {
+                        color: #2375D8;
+                    }
+                }
+            }
+            &:hover {
+                background: lightgray;
+                
+                a {
+                    color: black;
+                }
+                ul {
+                    visibility: visible;
+                    opacity: 1;
+                    box-shadow: 0px 3px 5px 2px #EBECF1;
+                    li {
+                        a {
+                            color: #F9F8FD;
+                        }
+                    }
                 }
             }
         }
+    }
+ 
+    .L-image{
+        height:35px;
+        width:35px;
+        position:absolute;
+        left: 29px;
+        top:7px;
+    }
+        
+    .user-image{
+        height: 30px;
+        width: 30px;
+        position: absolute;
+        right: 320px;
+        top: 9px;
+        border-radius: 50%;
+    }
 
-        a{
-            color:white;
-            text-decoration: none;
+    .logged-out-user-image{
+        height: 30px;
+        width: 30px;
+        position: absolute;
+        right: 305px;
+        top: 9px;
+    }
+   
+
+    @keyframes slide-in {
+        0% {
+            top: -50px;
         }
-
+        40% {
+            top: 20px;
+        }
+        70% {
+            top: 10px;
+        }
+        100% {
+            top: 15px;
+        }
     }
 }
