--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,8 +1,54 @@
-body{
-    margin: 0;
-    /* text-align: center; */
+html{
 
-    #layout-main{
-        height: 100%;
+    ::-webkit-scrollbar{
+        width: 12px;
+    }
+
+    /*Track*/
+    ::-webkit-scrollbar-track{
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+    }
+
+    /*Handle*/
+    ::-webkit-scrollbar-thumb {
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        background: #979899; 
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); 
+    }
+    ::-webkit-scrollbar-thumb:window-inactive {
+        background: #979899; 
+    }
+
+
+    body{
+        overflow-y: scroll;
+        
+        h1,h1,h3,h4,h5,h6,p,li{
+            color: white;
+            font-family: 'Ubuntu', sans-serif;
+        }
+
+        input:focus, textarea:focus, select:focus{
+            outline: none;
+        }
+
+        section{
+            height: 100%;
+        
+
+            main{
+                text-align: center;
+
+                #layout-main{
+                    height: 100%;
+                }
+                li{
+                    list-style: none;
+                }
+            }
+        }
     }
 }
