--- a/assets/scss/user_profile.scss
+++ b/assets/scss/user_profile.scss
@@ -2,3 +2,72 @@
 body{
     background-color: lightskyblue;
 }
+
+#user-profile{
+
+    overflow: hidden;
+    height:80vh;
+    color: white;
+
+    #change-details{
+        #update-avatar{
+           position:relative;
+           right: 20px;
+        }
+        .update-button{
+                cursor: pointer;
+                padding: 5px 9px;
+                border-radius: 9px;
+                font-size:1rem;
+                background-color:black;
+                color:white;
+                border: 2px solid lightgrey;
+    
+                &:hover{
+                    background-color:rgba(51, 51, 54, 0.719);
+                    color:white;
+                 }
+            
+        }
+        input{
+            position:relative;
+            left: 45%;
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 20px;
+            border: 2px solid gray;
+            border-radius: 10px;
+            padding-left: 5px;
+        }
+    }
+
+    #add-friend
+        {
+            background-color: rgb(49, 228, 49);
+            border: 2px solid lightgray;
+            padding:5px;
+            border-radius:10px;
+            text-decoration: none;
+            color:white;
+        
+            &:hover
+            {
+                background-color:red;
+            }
+        }
+
+        #remove-friend
+        {
+            background-color: black;
+            border: 2px solid white;
+            padding:5px;
+            border-radius:10px;
+            text-decoration: none;
+            color:white;
+        
+            &:hover
+            {
+                background-color: orangered;
+            }
+        }
+    }
