--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,5 +1,76 @@
-<header id="layout-header">
-    <nav>
+<header>
+    <% if(locals.user) {%>
+        <div class="header">
+            <nav>
+                <ul>
+                    <div class="nav-flex">
+                        <li>
+                           <a href="/">
+                                <span><img src="/images/link-up-low-resolution-logo-black-on-white-background.png" class="L-image"></span>
+                                <span style="padding-left: 26px;">Link-up</span>
+                           </a> 
+                        </li>
+                    </div>
+
+                    <div class="nav-flex">
+                        <li class="home">
+                            <a href="/">Home</a>
+                        </li>
+                        <li>
+                            <a href="/users/profile/<%= user.id %>">
+                                
+                                <span> <img src="<%= locals.user.avatar %>" class="user-image"></span>
+                                <span style="padding-left: 26px;"> <%= user.name %></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/users/sign-out">Sign Out</a>
+                        </li>
+                    </div>
+                </ul>
+            </nav>
+        </div>
+
+   <% } else { %>
+
+        <div class="header">
+            <nav>
+                <ul>
+                    <div class="nav-flex">
+                        <li>
+                            <a href="/">
+                               
+                                <span >Link-up</span>
+                            </a>
+                        </li>
+                    </div>
+
+                    <div class="nav-flex">
+                        <li>
+                            <a href="/">Home</a>
+                        </li>
+
+                        <li>
+                            <div>
+                                <a href="/users/sign-in">
+                                    <span> <img src="/images/userImage.com.png" class="logged-out-user-image"> </span>
+                                    <span style="padding-left: 26px;">Profile</span>
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="/users/sign-in">
+                                Login / Sign up
+                            </a>
+                        </li>
+
+                    </div>
+                </ul>
+            </nav>
+        </div>
+    <% } %>
+</header>
+    <!-- <nav>
         <div class="mini-logo">
             <p>
                 <a href='/'>
@@ -14,15 +85,15 @@
                 <li>
                     <a href="/users/profile/<%= user.id %>"><%= user.name %></a>
                 </li>
-                <li>
-                    <a href="/users/sign-out">Sign Out</a>
-                </li>
-                <% }else{ %>
-                <li>
-                    <a href="/users/sign-in">Sign In</a>
-                </li>
-                <li>
-                    <a href="/users/sign-up">Sign Up</a>
+                    <li>
+                        <a href="/users/sign-out">Sign Out</a>
+                    </li>
+                    <% }else{ %>
+                    <li>
+                        <a href="/users/sign-in">Sign In</a>
+                    </li>
+                    <li>
+                        <a href="/users/sign-up">Sign Up</a>
                 </li>
         
                 <% } %>
@@ -30,4 +101,4 @@
         </div>
     </nav>
  
-</header>
+</header> -->
