--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,21 +12,24 @@
         <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
-        
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/878809500d.js" crossorigin="anonymous"></script>
         <%- style %>
     </head>
 
     <body>
-        <%- include('_header'); -%>
-        
-        <main id="layout-main">
+        <section>
+            <%- include('_header'); -%>
             
-            <%- body -%>
+            <main id="layout-main">
+                
+                <%- body -%>
 
-        </main>
+            </main>
 
 
-        <%- include('_footer'); -%>
+            <%- include('_footer'); -%>
+        </section>
 
         <%- script -%>
         
