--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,43 +1,50 @@
 
 <link rel="stylesheet" href="/css/user_profile.css">
+<section id="user-profile">
+    <h1> Profile Page</h1>
 
-<% if(profile_user.avatar) { %>
-    <img src="<%= user.avatar %>" alt="<%= user.name %>" width="100">
-<% } %>
+    <img src="<%= profile_user.avatar %>" alt="<%= user.name %>"  width="150" height="150" style="border-radius: 50%;">
+    <!-- <% if(profile_user.avatar) { %>
+        <img src="<%= user.avatar %>" alt="<%= user.name %>" width="100">
+    <% } %> -->
 
-<% if(user.id === profile_user.id) { %>
-    <!--if user matches then show the form-->
-    <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="post">
+    <% if(user.id === profile_user.id) { %>
+        <!--if user matches then show the form-->
+        <h4>Update Details</h4>
 
-        <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>" required>
-        <input type="email" name="email" placeholder="Your Email" value="<%= profile_user.email %>" required>
+        <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="post" id="change-details">
 
-        <input type="file" name="avatar" placeholder="Profile Picture">
-        <input type="submit" value="Update">
+            <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>" required>
+            <input type="email" name="email" placeholder="Your Email" value="<%= profile_user.email %>" required>
 
-    </form>
+            <label for="file" id="update-avatar">Change Avatar :</label><br><br>
+            <input type="file" name="avatar" placeholder="Profile Picture">
+            <input type="submit" value="Update" class="update-button">
 
-<% }else{ %>
-    <!--else show only the profile info-->
-    <p> <%= profile_user.name %> </p>
-    <p> <%= profile_user.email %> </p>
+        </form>
 
-    <!-- add friend logic -->
-    <% if(!locals.are_friends) {%>
+    <% }else{ %>
+        <!--else show only the profile info-->
+        <p> <%= profile_user.name %> </p>
+        <p> <%= profile_user.email %> </p>
 
-        <a type="button" href="/users/profile/<%= profile_user._id %>/toggle_friend" id="add-friend">
-            Add Friend
-        </a>
-    
-    <% } else {%>
+        <!-- add friend logic -->
+        <% if(!locals.are_friends) {%>
 
-        <a type="button" href="/users/profile/<%= profile_user._id %>/toggle_friend" id="remove-friend">
-            Remove Friend
-        </a>
+            <a type="button" href="/users/profile/<%= profile_user._id %>/toggle_friend" id="add-friend">
+                Add Friend
+            </a>
+        
+        <% } else {%>
 
-    <% } %>
+            <a type="button" href="/users/profile/<%= profile_user._id %>/toggle_friend" id="remove-friend">
+                Remove Friend
+            </a>
 
-    <% } %>
+        <% } %>
+
+        <% } %>
+</section>
 
 
 
