--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,4 +1,4 @@
-<h1>Sign In</h1>
+<!-- <h1>Sign In</h1>
 
 <form action="/users/create-session" method="post">
     <input type="email" name="email" placeholder="Email" required>
@@ -11,4 +11,88 @@
     <a href="/users/auth/google">Google Sign In/Sign Up</a>
     <p></p>
     <a href="/users/reset-password">Forgot Password?</a>
-</p>
+</p> -->
+
+<link rel="stylesheet" href="/css/login.css">
+
+<div class="cont">
+
+    <!-- Sign In -->
+
+    <div class="form sign-in animate__animated animate__fadeInDown">
+
+        <h2>Welcome back,</h2>
+
+        <form action="/users/create-session" method="POST">
+            <label>
+                <span>Email</span>
+                <input type="email" name="email" required>
+            </label>
+            <label>
+                <span>Password</span>
+                <input type="password" name="password" required>
+            </label>
+
+            <a href="/users/reset-password" class="forgot-pass">Forgot Password?</a>
+
+            <button type="submit" class="submit">Sign In</button>
+
+            <a class="google-btn" href="/users/auth/google"> <button type="button" class="fb-btn">Connect with <span>Google</span></button> </a>
+        </form>
+
+    </div>
+
+    <div class="sub-cont">
+        <div class="img">
+            <div class="img__text m--up">
+                <h2>New here?</h2>
+                <p>Sign up and discover great amount of new opportunities!</p>
+            </div>
+            <div class="img__text m--in">
+                <h2>One of us?</h2>
+                <p>If you already have an account, just sign in. We've missed you!</p>
+            </div>
+            <div class="img__btn">
+                <span class="m--up">Sign Up</span>
+                <span class="m--in">Sign In</span>
+            </div>
+        </div>
+        
+        <!-- Sign Up -->
+    
+        <div class="form sign-up">
+
+            <h2>Start a new Journey</h2>
+
+            <form action="/users/create" method="POST">
+
+                <label>
+                    <span>Name</span>
+                    <input type="text" name="name" required>
+                </label>
+        
+                <label>
+                    <span>Email</span>
+                    <input type="email" name="email"  required>
+                </label>
+        
+                <label>
+                    <span>Password</span>
+                    <input type="password" name="password"  required>
+                </label>
+        
+                <label>
+                    <span>Confirm Password</span>
+                    <input type="password" name="confirm_password"  required>
+                </label>
+        
+                <button type="submit" class="submit">Sign Up</button>
+                <a  class="google-btn" href="/users/auth/google"><button type="button" class="fb-btn">Join with <span>Google</span></button></a>
+
+            </form>
+        </div>
+    </div>
+
+</div>
+
+<script type="text/javascript" src="/js/login.js"></script>
