--- a/views/_chat_box.ejs
+++ b/views/_chat_box.ejs
@@ -31,7 +31,7 @@
 
     <div class="open-button" onclick="openForm()">
         <span><img src="<%= locals.user.avatar %>" style="height:35px; width:35px; border-radius:50%; border: 2px solid black;"></span>
-        <span class="messaging">Messaging</span>
+        <span class="">Messaging</span>
     </div>
 
     <div id="user-chat-box">
