--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,11 +1,11 @@
-<footer id="layout-footer">
-    <div>
+<footer id="layout-footer" >
+    <div class="my-3">
         <p>
             &#169; Link-up . All Rights Reserved
         </p>
     </div>
 
-    <div>
+    <div class="my-3">
         <nav class="footer-nav">
             <ul>
                 <li>
