--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -20,7 +20,7 @@
                             <a href="/users/profile/<%= user.id %>">
                                 
                                 <span> <img src="<%= locals.user.avatar %>" class="user-image"></span>
-                                <span style="padding-left: 26px;"> <%= user.name %></span>
+                                <span> <%= user.name %></span>
                             </a>
                         </li>
                         <li>
