--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -32,10 +32,10 @@ body {
   .header ul li {
     border: 2px solid transparent;
     border-radius: 5px;
-    margin-top: 2px;
-    padding: 10px;
-    padding-top: 14px;
-    transition: background 0.2s; }
+    margin-top: -3px;
+    padding: 12px 9px 11px 10px;
+    transition: background 0.2s;
+    width: max-content; }
     .header ul li a {
       color: white;
       text-decoration: none;
@@ -81,10 +81,8 @@ body {
 .header .user-image {
   height: 30px;
   width: 30px;
-  position: absolute;
-  right: 320px;
-  top: 9px;
-  border-radius: 50%; }
+  border-radius: 50%;
+  margin-top: -2px; }
 
 .header .logged-out-user-image {
   height: 30px;
