--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -34,8 +34,7 @@
       color: white;
       border: 2px solid lightgrey;
       height: 80px;
-      width: 65%;
-      background-image: linear-gradient(to right, #314755 0%, #26a0da 51%, #314755 100%); }
+      width: 65%; }
     #home-container #feed-posts .add-post-button {
       cursor: pointer;
       padding: 5px 9px;
@@ -44,7 +43,7 @@
       position: relative;
       font-size: 1rem;
       bottom: 27px;
-      background-color: black;
+      background-color: #4169e1;
       color: white;
       font-weight: bold;
       border: 2px solid lightgrey; }
@@ -56,7 +55,6 @@
       margin: 30px 0;
       padding: 15px;
       padding-top: 0;
-      background-image: linear-gradient(to right, #A1C4FD, #C2E9FB);
       text-align: left; }
       #home-container #feed-posts #posts-list-container .each-post .avatar-cross {
         display: flex;
@@ -78,7 +76,9 @@
       #home-container #feed-posts #posts-list-container .each-post .post-comments .add-button {
         cursor: pointer;
         padding: 2px 5px;
-        border-radius: 9px; }
+        border-radius: 9px;
+        background-color: #4169e1;
+        border: 2px solid lightgrey; }
   #home-container .list-group li {
     position: relative;
     left: 2vw;
@@ -92,9 +92,6 @@
   #home-container #user-friends {
     width: 30%;
     padding: 10px; }
-    #home-container #user-friends .user-name {
-      position: relative;
-      bottom: 11px; }
     #home-container #user-friends #friends-container {
       border-bottom: 2px solid lightgrey; }
 
