--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -36,7 +36,7 @@
             border: 2px solid lightgrey;
             height:80px;
             width:65%;
-            background-image: linear-gradient(to right, #314755 0%, #26a0da  51%, #314755  100%);
+            // background-image: linear-gradient(to right, #314755 0%, #26a0da  51%, #314755  100%);
         }
 
         .add-post-button{
@@ -47,7 +47,7 @@
             position: relative;
             font-size:1rem;
             bottom:27px;
-            background-color:black;
+            background-color:#4169e1;
             color:white;
             font-weight: bold;
             border: 2px solid lightgrey;
@@ -60,12 +60,12 @@
         #posts-list-container{
 
             .each-post{
+                
                 border: 3px solid white;
                 border-radius: 10px;
                 margin: 30px 0;
                 padding:15px;
                 padding-top: 0;
-                background-image: linear-gradient(to right ,#A1C4FD, #C2E9FB);
                 text-align: left;
 
                 .avatar-cross{
@@ -90,16 +90,18 @@
                 }
 
                 .post-comments{
-
                     .add-text{
                         padding-left: 10px;
                         border-radius: 10px;
+                         
                     }
 
                     .add-button{
                         cursor: pointer;
                         padding: 2px 5px;
                         border-radius: 9px;
+                        background-color:#4169e1;
+                        border: 2px solid lightgrey;
                     }
                 }
 
@@ -117,6 +119,8 @@
             left:2vw;
             text-align:left;
             margin-bottom: 5px;
+
+            
         }
         p{
             position: relative;
@@ -129,10 +133,6 @@
         width: 30%;
         padding: 10px;
 
-        .user-name{
-            position: relative;
-            bottom: 11px;
-        }
 
         #friends-container{
             border-bottom: 2px solid lightgrey;
@@ -146,4 +146,5 @@
 #home-container::-webkit-scrollbar {
     display: none;
 }
+
 
