--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,10 +1,12 @@
 <html>
     <head>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
         <title>
             <%= title %>
         </title>
        
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -14,7 +16,10 @@
         <link rel="stylesheet" href="/css/footer.css">
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/878809500d.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        
         <%- style %>
+
     </head>
 
     <body>
