--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -11,14 +11,9 @@
         
             <!-- Delete button Post -->
             <% if(locals.user && locals.user.id == post.user.id){ %>
-                <small>
-                    <a class="delete-post-button" href="/posts/destroy/<%= post.id %>" style="text-decoration: none;">
-                        <img src="/images/garbage.png" style="width:25px;height:25px;cursor:pointer;position: relative;top: 3px;">
-                        <span></span>
-                        <span></span>
-                        <span></span>
+                    <a href="/posts/destroy/<%= post.id %>" style="text-decoration: none;" class="mt-3">
+                        <i class="bi bi-trash3-fill fs-4 text-danger"></i>
                     </a>
-                </small>
             <% } %>
 
         </div>
